Broken input fixed

--- a/src/app/components/team-components/team-create/team-create.component.css
+++ b/src/app/components/team-components/team-create/team-create.component.css
@@ -1,13 +1,13 @@
-input {
-	display: none;
-}
-
 .image-upload-container {
 	cursor: pointer;
 	padding: .5em 1em;
 	margin: 2em;
 	background-color: red;
 	border-radius: 5px;
+}
+
+.image-upload-container input {
+	display: none;
 }
 
 .img-preview-container {
